# carsus

./: .codecov.yml  .coveragerc  .gitignore  .travis.yml  MANIFEST.in  Quick Guide.ipynb  README.md  README.rst  carsus_env3.yml  comparing_atomic_files.ipynb  conda-requirements  pytest.ini  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: bridge.yml  carsus-data-repos-config.yml  docs-build.yml  documentation-build.yml  documentation-preview.yml  save_atomic_files.yml  tests.yml  unit-tests.yml
azure-pipelines/: doc-build.yml  multi_test_framework.yml
carsus/: __init__.py  base.py  conftest.py  util.py
carsus-ci/: carsus_ci_env.yml  carsus_rtd_env.yml
carsus/alchemy/: __init__.py  atomic.py  units.py
carsus/data/: basic_atomic_data.csv  cmfgen_config.yml
carsus/io/: __init__.py  atom_data_compare.py  base.py  chianti_io.py  output.py  util.py  zeta.py
carsus/model/: __init__.py  atomic.py
carsus/tests/: create_test_db.py  setup_package.py  test_base.py  test_util.py
carsus/util/: __init__.py  hash.py  helpers.py  selected.py  selected_grammar.py
carsus_ci/: carsus_ci_env27.yml  carsus_rtd_env27.yml
docs/: api.rst  commit_note_1.rst  commit_note_2.rst  compare_atomic_files.ipynb  conf.py  index.rst  installation.ipynb  installation.rst  model.rst  publications.bib  quickstart.ipynb  quickstart.rst  references.bib  tardis_atomdata_ref.ipynb
docs/_templates/: layout.html
docs/development/: compare_atomic_files.ipynb  index.rst  notation.rst  testing.rst  units.rst
docs/io/: chianti.ipynb  cmfgen.ipynb  data_sources.rst  (+5 more)
licenses/: LICENSE.rst
notebooks/: Output module.ipynb  Quantities.ipynb  output.ipynb
(+100 files in other folders)
